Minor fixes - Change fallback HTML entity is templates - Hide primary activities on Collection mobile-view

--- a/pub/static/themes/whitelabel/components/primary-activities/_components.primary-activities.scss
+++ b/pub/static/themes/whitelabel/components/primary-activities/_components.primary-activities.scss
@@ -34,9 +34,13 @@
             }
         }
     }
+}
 
-    @include media-query(palm) {
-        display: none;
+.primary-content {
+    .primary-activities {
+        @include media-query(palm) {
+            display: none;
+        }
     }
 }
 
